<resources>
    <string name="app_name">Penn State ID</string>
    <string name="psu_label">PennState</string>
    <string name="id_label">id+</string>
    <string name="psu_id_label">PSU ID</string>
    <string name="next_button_label">Next</string>

    <!-- President Profile information -->
    <string name="president_last_name">Bendapudi</string>
    <string name="president_first_name">Neeli</string>
    <string name="president_machine_id">123456 12345678910</string>
    <string name="president_id_number">1 2345 6789</string>
    <string name="president_position_description">FACULTY/PRESIDENT</string>

    <!-- IST Dean Profile information -->
    <string name="ist_dean_last_name">Sears</string>
    <string name="ist_dean_first_name">Andrew</string>
    <string name="ist_dean_machine_id">987654 32101098765</string>
    <string name="ist_dean_id_number">8 8765 4321</string>
    <string name="ist_dean_position_description">FACULTY/DEAN</string>

    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="login_button">LogIn</string>
    <string name="register_button">Register</string>

    <string name="email_hint">abc123@psu.edu</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>


    <string name="menu_info">Info</string>
    <string name="menu_register">Register</string>
    <string name="menu_login">Log In</string>
    <string name="app_info">This app supports class activities for HCDD 340!</string>
    <string name="login_error_title">Unable to login</string>
    <string name="login_error_message">Please retry using correct email and password.</string>
    <string name="last_name_label">Last Name:</string>
    <string name="first_name_label">First Name:</string>

    <string name="in_ist_switch_label">I am an IST major</string>

    <string name="about_hcdd_340"><big><b>Human-Centered Design for Mobile Computing (HCDD 340)</b></big>
    \n
    \n
    This course will provide a <i>hands-on</i> introduction to different methods and tools for designing and developing mobile systems.
    \n
    \n
    It will specifically focus on introducing different input modalities, discussing design guidelines, exploring sensing capabilities, and addressing accessibility requirements in mobile devices.
    \n
    \n
    Toward this goal, the course will use the Android ecosystem to design and develop applications and interfaces.
    \n
    \n
    The course will specifically follow a learning-by-doing approach through different class activities, assignments, and a final project.
    \n
    \n
    <b>Learning Objectives</b>
    \n
    \n
    \u00A0\u00A0● Become familiar with processes and tools for mobile system design and development
    \n
    \n
    \u00A0\u00A0● Understand design requirements and guidelines for mobile applications
    \n
    \n
    \u00A0\u00A0● Translate design ideas into functional prototypes and applications
    \n
    \n
    \u00A0\u00A0● Develop and evaluate mobile systems
    </string>

    <string name="college_label">College:</string>
    <string-array name="penn_state_colleges">
        <item>College of Agricultural Sciences</item>
        <item>College of Arts and Architecture</item>
        <item>Smeal College of Business</item>
        <item>Donald P. Bellisario College of Communications</item>
        <item>College of Earth and Mineral Sciences</item>
        <item>College of Education</item>
        <item>College of Engineering</item>
        <item>College of Health and Human Development</item>
        <item>College of Information Sciences and Technology</item>
        <item>Dickinson Law</item>
        <item>Penn State Law</item>
        <item>College of the Liberal Arts</item>
        <item>College of Medicine</item>
        <item>Ross and Carol Nese College of Nursing</item>
        <item>Eberly College of Science</item>
        <item>Schreyer Honors College</item>
        <item>Graduate School</item>
        <item>Pennsylvania College of Technology</item>
    </string-array>
</resources>